add keep_history: true to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ deploy:
   provider: pages
   local_dir: ./public/
   target-branch: master
+  keep_history: true
   # Make sure you have skip_cleanup set to true,
   # otherwise Travis CI will delete all the files created during the build, which will probably delete what you are trying to upload.
   skip_cleanup: true
