--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
 deploy:
   provider: pages
   local_dir: ./public/
-  target-branch: master
+  target-branch: gh-pages
   keep_history: true
   # Make sure you have skip_cleanup set to true,
   # otherwise Travis CI will delete all the files created during the build, which will probably delete what you are trying to upload.
